2002-08-23  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas:
	Correct start_with_sidebar key. Patch from hp@redhat.com

=== nautilus 2.0.5 ===
	
2002-08-23  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	Bump to 2.0.5.

2002-08-21  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-factory.c
	(nautilus_icon_factory_get_icon_for_file): fix
	in-icon svg rendering, also obey thumbnailing
	preferences for svg files (!).

2002-08-20  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-link-desktop-file.c:
	* libnautilus-private/nautilus-link-desktop-file.h:
	New function nautilus_link_desktop_file_local_is_utf8.

	* libnautilus-private/nautilus-link.c:
	* libnautilus-private/nautilus-link.h:
	New function nautilus_link_local_is_utf8.
	
	* src/file-manager/fm-desktop-icon-view.c
	(update_desktop_directory):
	Recreate trash and homedir links if they are not in utf8.

2002-08-15  Dave Camp  <dave@ximian.com>

	* libnautilus/nautilus-clipboard.c (select_all_callback): Save the 
	source so the idle callback can cancel the weak ref.
	(select_all_idle_callback): Cancel the weak ref so the source
	isn't destroyed twice.
	This should fix #74403.

2002-08-15  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (icon_set_position):
	Work around our strange size allocation problems by always assuming
	the size of fixed_size containers is the size of the screen.
	This fixes the problem where all desktop icons end up in a pile in the
	top left corner on startup.
	We really need to fix our size allocation.

2002-08-14  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c: 
	(nautilus_icon_container_class_init): Install a frame_text gtk
	style property, so that accessible themes can force the icon
	container to put a frame around unselected text.
	(setup_label_gcs): Use text[SELECTED] for the highlight text