@@ -1,3 +1,14 @@
+2002-08-28  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-volume-monitor.h: 
+	* libnautilus-private/nautilus-volume-monitor.c: 
+	New functions: nautilus_volume_copy, nautilus_volume_free,
+	nautilus_volume_hash, nautilus_volume_is_equal.
+	
+	* libnautilus-private/nautilus-trash-directory.c:
+	NautilusVolumes are not persistant. Don't keep pointers to old
+	ones, keep copies instead. 
+
 2002-08-23  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas:
